<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/nav_events"
        android:icon="@drawable/ic_events"
        android:title="Events" />
    <item
        android:id="@+id/nav_profiles"
        android:icon="@drawable/ic_profile"
        android:title="Profiles" />

    <item
        android:id="@+id/nav_images"
        android:icon="@drawable/ic_image"
        android:title="Images" />

    <item
        android:id="@+id/nav_logs"
        android:icon="@drawable/ic_logs"
        android:title="Logs" />
</menu>